fix: Fix issue that doesn't fit parent element's width in GoodsList

--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -20,13 +20,17 @@
       padding-left: 1rem;
       padding-right: 1rem;
     }
-    .brand {
-      color: white;
-      font-size: 1.5rem;
-      font-weight: 600;
-    }
     .right {
       margin-left: auto;
+      @include media('>wide') {
+        font-size: 1.3rem;
+      }
+      @include media('>large') {
+        font-size: 1.3rem;
+      }
+      @include media('<medium') {
+        font-size: 1rem;
+      }
     }
   }
 }
