--- a/src/components/ranking/RankingList/RankingList.scss
+++ b/src/components/ranking/RankingList/RankingList.scss
@@ -8,6 +8,7 @@
   border-bottom: 0.8px solid $oc-gray-3;
   .ranking-index {
     font-size: 1rem;
+    padding: 1rem 0.8rem 0 0.8rem;
   }
   .ranking-img {
     width: 5rem;
@@ -24,6 +25,8 @@
     }
     .ranking-description {
       color: $oc-gray-5;
+      font-size: 0.8rem;
+      margin-top: 0.5rem;
     }
   }
 }
